--- a/gallery.html
+++ b/gallery.html
@@ -52,7 +52,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="register.html">Register</a></li>
+                    <li><a target=_blank href="https://docs.google.com/forms/d/e/1FAIpQLSeh6sSADOYs07K36-xYYsb2g46OhGLH7doGZOj5c5QXO5j21Q/viewform">Register Now!</a></li>
                     <li><a href="faq.html">FAQ</a></li>
                     <li><a href="about.html">About Us</a></li>
 <!--                    <li><a href="team.html">Team</a></li>-->
