--- a/register.html
+++ b/register.html
@@ -75,7 +75,8 @@
         <br>
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <p class="lead">Registration will go  live right here at <strong>12 pm</strong> on <strong>Monday, February 13th</strong>. In the meantime go get your dream team ready. Check out <a href="faq.html">FAQ</a> or <a href="contact.html">contact</a> us if you have any questions.</p>
+                <h2><a class="col-md-4 col-md-offset-4" style="text-align:center;" href="https://docs.google.com/forms/d/e/1FAIpQLSeh6sSADOYs07K36-xYYsb2g46OhGLH7doGZOj5c5QXO5j21Q/viewform">Register</a></h2>
+<!--                <p class="lead">Registration will go  live right here at <strong>12 pm</strong> on <strong>Monday, February 13th</strong>. In the meantime go get your dream team ready. Check out <a href="faq.html">FAQ</a> or <a href="contact.html">contact</a> us if you have any questions.</p>-->
                 </div>
         </div>
 <!--        <div><img class="rounded-img col-xs-3 col-md-4" src="img/korea-japan-background.jpg"></div>-->
