add infographic to gonzo page

--- a/gonzo.html
+++ b/gonzo.html
@@ -75,7 +75,8 @@
             <img class="col-xs-12 col-md-6 col-md-offset-3" src="img/titles/gonzo-title.png">
         </div>
         <br>
-        <div class="row">
+        <div class="row" style="margin:0 auto;">
+<!--
             <div class="col-md-8 col-md-offset-2">
                 <p class="lead">In May 2009, Gonzo Soccer’s soon-to-be co-founders Monica Gonzalez and Alyse LaHue held a soccer clinic for Latino girls at Chitown Futbol in Chicago’s inner city. </p>
                 <p>Monica, former captain of the Mexican National team, and Alyse, then-marketing director of the Chicago Red Stars women’s professional team, were a formidable coaching pair and the soccer clinic was a huge success — so much so that the owner of Chitown Futbol asked them to come back and teach another one.</p>
@@ -85,11 +86,12 @@
                 <p>NU World Cup is proud to be supporting Gonzo and its efforts to empower young girls and women in the Chicagoland area and beyond.</p>
                 <p>To find out more about Gonzo Soccer, you can visit their website <a href="http://www.gonzosoccer.org">here</a>.</p>
             </div>
+-->
+            <img class="col-xs-12  col-md-offset-2 col-md-8" src=img/gonzo-infograph-short.png>
         </div>
     </div>
 
         <div class="clear"></div>
-    </div>
 
     <div class="container">    
         <hr>
