--- a/info.html
+++ b/info.html
@@ -390,7 +390,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; NU World Cup 2016. Built by <a href="http://twitter.com/YoniPinto/" target="_blank">Yoni Pinto</a> and <a href="http://github.com/jaiveerkothari/" target="_blank">Jaiveer Kothari</a>.</p>
+                    <p>Copyright &copy; NU World Cup 2017. </p> <!-- Built by <a href="http://twitter.com/YoniPinto/" target="_blank">Yoni Pinto</a> and <a href="http://github.com/jaiveerkothari/" target="_blank">Jaiveer Kothari</a>.</p> -->
                 </div>
             </div>
         </footer>
