Women's World Cup
Two groups, had to change js

--- a/info.html
+++ b/info.html
@@ -290,26 +290,16 @@
                     <a href="#group-j-f" id="group-j">
                     </a>
                 </div>
-                <!-- <div class="row">
-                    <a href="#group-f-f" id="group-f">
-                    </a>
-                    <a href="#group-g-f" id="group-g">
-                    </a>
-                    <a href="#group-h-f" id="group-h">
-                    </a>
-                    <a href="#group-i-f" id="group-h">
-                    </a>
-                    <a href="#group-j-f" id="group-h">
-                    </a>
-                </div> -->
             </div>
-<!--            <div class="col-md-3"> --> <!-- Women's Groups -->
-                <!-- <h2>Women's WC 2016</h2>
+            <div class="col-md-12"> <!-- Women's Groups -->
+                <h2>Women's World Cup 2017</h2>
                 <div class="row">
                     <a href="#group-a-w-f" id="group-a-w">
                     </a>
+                    <a href="#group-b-w-f" id="group-b-w">
+                    </a>
                 </div>
-            </div> -->
+            </div>
 <!-- Add this when games have been played -->
 <!--            <div class="col-md-12">
                 <h3>Click on any group (Co-ed or Women's) to get to that group's scheduled fixture!</h3>
