--- a/faq.html
+++ b/faq.html
@@ -192,7 +192,7 @@
             </div>
             <div id="collapseTen" class="panel-collapse collapse">
                 <div class="panel-body">
-                    Both tournament will be 2 days on the fields by the Lakeside. The final date is still to be decided. Traditionally, the tournament has been in the last two weeks of April or first two weeks of May.
+                    Both tournaments will be on Friday April 21st and Saturday April 22nd, on the fields by the Lakeside. 
                 </div>
             </div>
         </div>
@@ -204,7 +204,7 @@
             </div>
             <div id="collapseEleven" class="panel-collapse collapse">
                 <div class="panel-body">
-                    The Co-Ed tournament will be 32 teams divided to 8 groups. There will be group stages and then elimination bracket, just like FIFA World Cup. The Women's tournament structure is still to be decided.
+                    The Co-Ed tournament will be 40 teams divided into 10 groups. There will be group stages and then elimination bracket, just like FIFA World Cup. The Women's tournament will have 8 teams split into 2 groups. 
                 </div>
             </div>
         </div>
