--- a/info.html
+++ b/info.html
@@ -12,7 +12,7 @@
     <title>Tournament Info - NU World Cup 2017</title>
 
     <!-- Favicon link -->
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/ico" href="img/korea-japan-favicon.png">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -69,15 +69,16 @@
         </div>
         <!-- /.container -->
     </nav>
-    <div id="sidebar">
+    <!-- <div id="sidebar">
         <ul class="main-ul">
-<!--            <a href="#knockout-stage"><li class="main-li">Knockout</li></a>
--->
+            <a href="#knockout-stage"><li class="main-li">Knockout</li></a>
+
             <a href="#groups"><li class="main-li">Groups</li></a>
-<!--            <a href="#fixtures"><li class="main-li">Fixtures</li></a>
+
+            <a href="#fixtures"><li class="main-li">Fixtures</li></a>
             <li>
                 <ul class="ul-2">
-                    <a href="#wc-fixtures"><li class="li-2">World Cup 2016</li></a>
+                    <a href="#wc-fixtures"><li class="li-2">World Cup 2017</li></a>
                     <li>
                         <ul id="wc-fix-list" class="ul-3">
                             <a href="#group-a"><li>Group A</li></a>
@@ -88,19 +89,22 @@
                             <a href="#group-f"><li>Group F</li></a>
                             <a href="#group-g"><li>Group G</li></a>
                             <a href="#group-h"><li>Group H</li></a>
+                            <a href="#group-i"><li>Group I</li></a>
+                            <a href="#group-j"><li>Group J</li></a>
                         </ul>
                     </li>
-                    <a href="#wwc-fixtures"><li class="li-2">Women's WC 2016</li></a>
+                    <a href="#wwc-fixtures"><li class="li-2">Women's WC 2017</li></a>
                     <li>
                         <ul id="wwc-fix-list" class="ul-3">
-                            <a href=""><li>Group A</li></a>
+                            <a href=""><li>Group 1</li></a>
+                            <a href=""><li>Group 2</li></a>
                         </ul>
                     </li>
                 </ul>
             </li>
--->
+
         </ul>
-    </div>
+    </div> -->
 
     <!-- Page Content -->
     <div class="container">
@@ -301,14 +305,15 @@
                 </div>
             </div>
 <!-- Add this when games have been played -->
-<!--            <div class="col-md-12">
+           <div class="col-md-12">
                 <h3>Click on any group (Co-ed or Women's) to get to that group's scheduled fixture!</h3>
             </div>
--->
+
         </div>
 
+
 <!-- Results of Games / Fixtures for both WC and WWC-->
-<!--
+
         <hr>
         <div id="fixtures" class="row">
             <div class="col-md-12">
@@ -317,7 +322,7 @@
             <div class="col-lg-11 col-md-11 col-sm-10 col-xs-12" id="wc-fixtures">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2><strong>World Cup 2016 Group Stage</strong></h2>
+                        <h2><strong>World Cup 2017 Group Stage</strong></h2>
                     </div>
                 </div>
                 <div class="row group-row" id="group-a-f">
@@ -360,22 +365,37 @@
                         <h2>Group H</h2>
                     </div>
                 </div>
+                <div class="row group-row" id="group-i-f">
+                    <div class="col-md-12 fixture-group-title">
+                        <h2>Group I</h2>
+                    </div>
+                </div>
+                <div class="row group-row" id="group-j-f">
+                    <div class="col-md-12 fixture-group-title">
+                        <h2>Group J</h2>
+                    </div>
+                </div>
             </div>
             <div class="col-lg-11 col-md-11 col-sm-10 col-xs-12" id="wwc-fixtures">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2><strong>Women's World Cup 2016 Group Stage</strong></h2>
+                        <h2><strong>Women's World Cup 2017 Group Stage</strong></h2>
                     </div>
                 </div>
                 <div class="row group-row" id="group-a-w-f">
                     <div class="col-md-12 fixture-group-title">
-                        <h2>Group A</h2>
+                        <h2>Group 1</h2>
+                    </div>
+                </div>
+                <div class="row group-row" id="group-b-w-f">
+                    <div class="col-md-12 fixture-group-title">
+                        <h2>Group 2</h2>
                     </div>
                 </div>
             </div>
         </div>
         <hr>
--->
+
         <!-- Footer -->
         <footer>
             <div class="row">
