--- a/faq.html
+++ b/faq.html
@@ -41,7 +41,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                  <li><a target=_blank href="https://docs.google.com/forms/d/e/1FAIpQLSeh6sSADOYs07K36-xYYsb2g46OhGLH7doGZOj5c5QXO5j21Q/viewform">Register Now!</a></li>
+<!--                  <li><a target=_blank href="../img/GamesPacket2017.pdf">Rules and Regulation</a></li>-->
                   <li><a href="faq.html">FAQ</a></li>
                   <li><a href="about.html">About Us</a></li>
 <!--                    <li><a href="team.html">Team</a></li>-->
@@ -67,6 +67,8 @@
 
 
     <div class="panel-group" id="accordion">
+        <div class="faqHeader">Map</div>
+        <div style="text-align:center;"><img src=../img/fields.PNG></div>
         <div class="faqHeader">Registration</div>
         <div class="panel panel-default">
             <div class="panel-heading">
