trying to get image to show up

--- a/faq.html
+++ b/faq.html
@@ -68,7 +68,7 @@
 
     <div class="panel-group" id="accordion">
         <div class="faqHeader">Map</div>
-        <div style="text-align:center;"><img src=../img/fields.PNG></div>
+        <div style="text-align:center;"><img src="../img/fields.PNG"></div>
         <div class="faqHeader">Registration</div>
         <div class="panel panel-default">
             <div class="panel-heading">
