--- a/info.html
+++ b/info.html
@@ -201,9 +201,9 @@
 
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> 16 <span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> 17 <span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
@@ -228,9 +228,9 @@
 
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> 15 <span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> 18 <span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
@@ -255,9 +255,9 @@
 
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> 14 <span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> 19 <span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
@@ -282,9 +282,9 @@
 
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> 13 <span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> 20 <span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
