added fields n times

--- a/info.html
+++ b/info.html
@@ -121,64 +121,7 @@
         <div class="row" id="knockout-stage">
             <div class="col-md-12"><h1><strong>Knockout Stage</strong></h1></div>
             <div class="col-md-12">
-                <div class="row">
-                    <h2 class="final-title"><strong>Women's World Cup Bracket</strong></h2>
-                </div>
-                <!-- <div class="row fixture-row">
-                    <div class="col-md-10 col-md-offset-1">
-                        <div class="col-md-4 col-md-offset-1 col-xs-5 fixture-team">
-                            <span class="flag-icon flag-icon-dj flag-left"></span>Djibouti
-                        </div>
-                        <div class="col-md-2 col-xs-2 fixture-score">6 : 0</div>
-                        <div class="col-md-4 col-xs-5 fixture-team">
-                            France<span class="flag-icon flag-icon-fr flag-right"></span>
-                        </div>
-                        <div class="col-md-4 col-md-offset-4 col-xs-4 col-xs-offset-4 final game-identifier">
-                            <div class="row">
-                                <div class="col-md-12">Lakeside Field</div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-12">April 23, 7:30 PM</div>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
-                <main id="tournament">
-
-                    <ul class="round round-3">
-                        <li class="spacer">&nbsp;</li>
-
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
-                        <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
-
-                        <li class="spacer">&nbsp;</li>
-
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
-                        <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
-
-                        <li class="spacer">&nbsp;</li>
-                    </ul>
-
-                    <ul class="round round-4">
-                        <li class="spacer">&nbsp;</li>
-
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
-                        <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
-
-                        <li class="spacer">&nbsp;</li>
-                    </ul>
-
-                    <ul class="round round-5">
-                        <li class="spacer"></li>
-                        <li id="tournament-winner" class="winner"><i class="fa fa-trophy" aria-hidden="true"></i> <span class="flag-icon "></span> Winner</li>
-                        <li class="spacer"></li>
-                    </ul>
-
-                    
-                </main>
+                
             </div>
 
 
@@ -201,9 +144,9 @@
 
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> 16 <span class="bracket-score">0</span></li>
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Cyprus - Field 7<span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> 17 <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Poland - 2:30pm<span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
@@ -228,9 +171,9 @@
 
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> 15 <span class="bracket-score">0</span></li>
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Sweden - Field 6 <span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> 18 <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Sao Tome - 2:30pm<span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
@@ -255,9 +198,9 @@
 
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> 14 <span class="bracket-score">0</span></li>
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Belgium - Field 5<span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> 19 <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Hong Kong -2:30pm<span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
@@ -282,9 +225,9 @@
 
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> 13 <span class="bracket-score">0</span></li>
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Cameroon -Field 4 <span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> 20 <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Lebanon - 2:30pm<span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
@@ -308,52 +251,52 @@
                     <ul class="round round-1">
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> 1 <span class="bracket-score">0</span></li>
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Yemen <span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> 16 <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> TBD <span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> 8 <span class="bracket-score">0</span></li>
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Iran <span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> 9 <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Iceland <span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> 2 <span class="bracket-score">0</span></li>
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Cuba <span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> 15 <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> TBD <span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> 7 <span class="bracket-score">0</span></li>
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Fiji <span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> 10 <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Croatia <span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> 3 <span class="bracket-score">0</span></li>
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Costa Rica <span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> 14 <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> TBD <span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> 6 <span class="bracket-score">0</span></li>
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Nigeria <span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> 11 <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Turkey <span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> 4 <span class="bracket-score">0</span></li>
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Mexico <span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> 13 <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> TBD <span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> 5 <span class="bracket-score">0</span></li>
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> India <span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> 12 <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> USA <span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
                     </ul>
