--- a/info.html
+++ b/info.html
@@ -121,6 +121,46 @@
         <div class="row" id="knockout-stage">
             <div class="col-md-12"><h1><strong>Knockout Stage</strong></h1></div>
             <div class="col-md-12">
+                <div class="row">
+                    <h2 class="final-title"><strong>Women's World Cup Bracket</strong></h2>
+                </div>
+
+                <main id="tournament">
+
+                    <ul class="round round-3">
+                        <li class="spacer">&nbsp;</li>
+
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Norway - Field 1 <span class="bracket-score">0</span></li>
+                        <li class="game game-spacer"></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Iceland - 7pm <span class="bracket-score">0</span></li>
+
+                        <li class="spacer">&nbsp;</li>
+
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> USA - Field 3 <span class="bracket-score">0</span></li>
+                        <li class="game game-spacer"></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Ireland - 7pm  <span class="bracket-score">0</span></li>
+
+                        <li class="spacer">&nbsp;</li>
+                    </ul>
+
+                    <ul class="round round-4">
+                        <li class="spacer">&nbsp;</li>
+
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
+                        <li class="game game-spacer"></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
+
+                        <li class="spacer">&nbsp;</li>
+                    </ul>
+
+                    <ul class="round round-5">
+                        <li class="spacer"></li>
+                        <li id="tournament-winner" class="winner"><i class="fa fa-trophy" aria-hidden="true"></i> <span class="flag-icon "></span> Winner</li>
+                        <li class="spacer"></li>
+                    </ul>
+
+                    
+                </main>
                 
             </div>
 
@@ -146,7 +186,7 @@
 
                         <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Cyprus - Field 7<span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Poland - 2:30pm<span class="bracket-score">0</span></li>
+                        <li class="game game-bottom winner"><span class="flag-icon flag-icon-bracket"></span> Poland - 2:30pm<span class="bracket-score">3</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
@@ -173,7 +213,7 @@
 
                         <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Cameroon - Field 4 <span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Lebanon - 2:30pm<span class="bracket-score">0</span></li>
+                        <li class="game game-bottom winner "><span class="flag-icon flag-icon-bracket"></span> Lebanon - 2:30pm<span class="bracket-score">2</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
@@ -198,7 +238,7 @@
 
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Belgium - Field 5<span class="bracket-score">0</span></li>
+                        <li class="game game-top winner"><span class="flag-icon  flag-icon-bracket"></span> Belgium - Field 5<span class="bracket-score">4</span></li>
                         <li class="game game-spacer"></li>
                         <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Hong Kong -2:30pm<span class="bracket-score">0</span></li>
 
@@ -225,7 +265,7 @@
 
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Sweden -Field 6 <span class="bracket-score">0</span></li>
+                        <li class="game game-top winner"><span class="flag-icon  flag-icon-bracket"></span> Sweden -Field 6 <span class="bracket-score">2</span></li>
                         <li class="game game-spacer"></li>
                         <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Sao Tome - 2:30pm<span class="bracket-score">0</span></li>
 
@@ -253,7 +293,7 @@
 
                         <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Yemen <span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> TBD <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Poland <span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
@@ -265,7 +305,7 @@
 
                         <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Mexico <span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> TBD <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Lebanon <span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
@@ -277,7 +317,7 @@
 
                         <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Costa Rica <span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> TBD <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Belgium <span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
@@ -290,7 +330,7 @@
 
                         <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Cuba <span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> TBD <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Sweden <span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
